@@ -1,6 +1,8 @@
 2.4.0
 -----
 1. Add 'Read offset' setting for AudioCDs.
+2. Show invalid files in playlists using red text.
+3. Add 'Remove Invalid Tracks' to playlist context menu.
 
 2.3.3
 -----
